--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,8 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: ${{ secrets.AWS_REGION }}
-  ECS_CLUSTER: ${{ secrets.ECS_CLUSTER_NAME }}
-
+  AWS_REGION: ap-south-1
+  ECS_CLUSTER: poc-portal
 jobs:
   deploy:
     runs-on: ubuntu-latest
