--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 env:
   AWS_REGION: ap-south-1
   ECS_CLUSTER: poc-portal
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,60 +17,59 @@ jobs:
       contents: read
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
 
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
+      # ---------------- APP IMAGE ----------------
+      - name: Build & Push App Image
+        run: |
+          docker build -t app-image ./app
+          docker tag app-image:latest ${{ steps.login-ecr.outputs.registry }}/testing_load-prod:app
+          docker push ${{ steps.login-ecr.outputs.registry }}/testing_load-prod:app
 
-    # ---------------- APP IMAGE ----------------
-    - name: Build & Push App Image
-      run: |
-        docker build -t app-image ./app
-        docker tag app-image:latest ${{ steps.login-ecr.outputs.registry }}/app-ecr:latest
-        docker push ${{ steps.login-ecr.outputs.registry }}/app-ecr:latest
+      # ---------------- JMETER IMAGE ----------------
+      - name: Build & Push JMeter Image
+        run: |
+          docker build -t jmeter-image ./jmeter
+          docker tag jmeter-image:latest ${{ steps.login-ecr.outputs.registry }}/testing_load-prod:jmeter
+          docker push ${{ steps.login-ecr.outputs.registry }}/testing_load-prod:jmeter
 
-    # ---------------- JMETER IMAGE ----------------
-    - name: Build & Push JMeter Image
-      run: |
-        docker build -t jmeter-image ./jmeter
-        docker tag jmeter-image:latest ${{ steps.login-ecr.outputs.registry }}/jmeter-ecr:latest
-        docker push ${{ steps.login-ecr.outputs.registry }}/jmeter-ecr:latest
+      # ---------------- LOCUST IMAGE ----------------
+      - name: Build & Push Locust Image
+        run: |
+          docker build -t locust-image ./locust
+          docker tag locust-image:latest ${{ steps.login-ecr.outputs.registry }}/testing_load-prod:locust
+          docker push ${{ steps.login-ecr.outputs.registry }}/testing_load-prod:locust
 
-    # ---------------- LOCUST IMAGE ----------------
-    - name: Build & Push Locust Image
-      run: |
-        docker build -t locust-image ./locust
-        docker tag locust-image:latest ${{ steps.login-ecr.outputs.registry }}/locust-ecr:latest
-        docker push ${{ steps.login-ecr.outputs.registry }}/locust-ecr:latest
+      # ---------------- DEPLOY ECS ----------------
+      - name: Deploy App Service
+        run: |
+          aws ecs update-service \
+            --cluster $ECS_CLUSTER \
+            --service app-service \
+            --force-new-deployment
 
-    # ---------------- DEPLOY ECS ----------------
-    - name: Deploy App Service
-      run: |
-        aws ecs update-service \
-          --cluster $ECS_CLUSTER \
-          --service app-service \
-          --force-new-deployment
+      - name: Deploy JMeter Service
+        run: |
+          aws ecs update-service \
+            --cluster $ECS_CLUSTER \
+            --service jmeter-service \
+            --force-new-deployment
 
-    - name: Deploy JMeter Service
-      run: |
-        aws ecs update-service \
-          --cluster $ECS_CLUSTER \
-          --service jmeter-service \
-          --force-new-deployment
-
-    - name: Deploy Locust Service
-      run: |
-        aws ecs update-service \
-          --cluster $ECS_CLUSTER \
-          --service locust-service \
-          --force-new-deployment
+      - name: Deploy Locust Service
+        run: |
+          aws ecs update-service \
+            --cluster $ECS_CLUSTER \
+            --service locust-service \
+            --force-new-deployment
