--- a/locust/Dockerfile
+++ b/locust/Dockerfile
@@ -1,2 +1,9 @@
 FROM locustio/locust
+
+WORKDIR /mnt/locust
+
 COPY locustfile.py /mnt/locust/locustfile.py
+
+EXPOSE 8089
+
+CMD ["locust", "--web-host", "0.0.0.0", "--web-port", "8089"]
